--- a/ReHouse.FrontEnd/Views/Map/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Map/Index.cshtml
@@ -32,7 +32,7 @@
             </ul>
         </li>
         <li>@Html.ActionLink("4. Новостройки", "index", "newbuilding")</li>
-        <li><a href="#"> 5. Менеджеры</a></li>
+        <li>@Html.ActionLink("5. Менеджеры", "index", "manager")</li>
         <li>
             <a> 6. О нас</a>
             <ul>
