--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
 }
 
 @Scripts.Render("~/bundles/jcarousel")
+@Scripts.Render("~/bundles/showDetails")
 <script type="text/javascript">
     jQuery(document).ready(function () {
         jQuery('.d-carousel .carousel').jcarousel({
@@ -132,29 +133,29 @@
 
 <div class="news">
     <h2>Новости</h2>
-    <div class="firstnews">
-        <div class="img">
-            <img src="~/Content/images/news1.jpg" width="440" height="263">
+    @foreach (var article in Model.Articles)
+    {
+        <div class="firstnews">
+            <div class="img">
+                <img src="~/Content/images/news1.jpg" width="440" height="263">
+            </div>
+            <div class="content1">
+                <h3>@article.Title</h3>
+                @if (@article.Description.Length > 750)
+                {
+                    <p id="news_@article.Id">@article.Description.Substring(0, 749) ...</p>
+                }
+                else
+                {
+                    <p>@article.Description</p>
+                }
+                <h4>@article.Date.ToShortDateString() в @article.Date.ToShortTimeString()</h4>
+                <a onclick="showDetails(@article.Id, this);" id="more">Подробнее</a>
+                <p id="newsHidden_@article.Id" style="display:none">@article.Description</p>
+            </div>
         </div>
-        <div class="content1">
-            <h3>Шикарные апартаменты в центре города</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est lqui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore mamet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore m</p>
-            <h4>12.08.2016 в 17:43</h4>
-            <a href="#" id="more">Подробнее</a>
-        </div>
-    </div>
-    <div class="secondnews">
-        <div class="img">
-            <img src="~/Content/images/news2.jpg" width="440" height="263">
-        </div>
-        <div class="content2">
-            <h3>Обвал цен</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conseq magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est lqui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore mamet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore m</p>
-            <h4>28.06.2016 в 13:34</h4>
-            <a href="#" id="more">Подробнее</a>
-        </div>
-    </div>
-
+    }
+    
     <div class="morenews">
         <a href="~/news/index" id="more">Все новости</a>
     </div>
