--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -104,7 +104,7 @@
 
             <div class="feedback">
                 <a href="~/cart/index" id="fav">Список желаний</a>
-                <a href="feedback.html" id="blink">Обратный звонок</a>
+                <a href="~/email/index" id="blink">Обратный звонок</a>
             </div>
 
         </div>
@@ -137,7 +137,7 @@
                         </ol>
                     </li>
                     <li><a href="~/newbuilding/">Новостройки</a></li>
-                    <li><a href="#" id="">Менеджеры</a></li>
+                    <li><a href="~/manager/" id="">Менеджеры</a></li>
                     <li>
                         <a href="#" id="">О нас</a>
                         <ol>
